@@ -115,8 +115,8 @@ public:
 
   _WRAP_METHOD(bool get_transform_for_child(const Glib::RefPtr<Item>& child, Cairo::Matrix* transform), goo_canvas_item_get_transform_for_child)
 
-  _WRAP_METHOD(Glib::RefPtr<Style> get_style(), goo_canvas_item_get_style)
-  _WRAP_METHOD(Glib::RefPtr<const Style> get_style() const, goo_canvas_item_get_style, constversion)
+  _WRAP_METHOD(Glib::RefPtr<Style> get_style(), goo_canvas_item_get_style, refreturn)
+  _WRAP_METHOD(Glib::RefPtr<const Style> get_style() const, goo_canvas_item_get_style, refreturn, constversion)
   _WRAP_METHOD(void set_style(const Glib::RefPtr<Style>& style), goo_canvas_item_set_style)
 
   _WRAP_METHOD(void animate(double x, double y, double scale, double degrees, bool absolute, int duration, int step_time, GooCanvasAnimateType type), goo_canvas_item_animate)
@@ -128,6 +128,7 @@ public:
   //_WRAP_SIGNAL(void child_removed(int child_num), "child_removed")
   //_WRAP_SIGNAL(void changed(bool recompute_bounds), "changed")
 
+#m4 _CONVERSION(`GooCanvasItem*',`const Glib::RefPtr<Item>&',`Glib::wrap($3, true)')
   _WRAP_SIGNAL(bool enter_notify_event(const Glib::RefPtr<Item>& target, GdkEventCrossing* event), "enter_notify_event")
   _WRAP_SIGNAL(bool leave_notify_event(const Glib::RefPtr<Item>& target, GdkEventCrossing* event), "leave_notify_event")
   _WRAP_SIGNAL(bool motion_notify_event(const Glib::RefPtr<Item>& target, GdkEventMotion* event), "motion_notify_event")
